# hosts-lock

./: CMakeLists.txt  LICENSE  README.md  lock.cpp  lunch-unlock.cpp
.github/workflows/: ci.yml  cmake-multi-platform.yml  release.yml
linux/: CMakeLists.txt  lock.cpp  lunch-lock.cpp  lunch-unlock.cpp  unlock.cpp
windows/: CMakeLists.txt  lock.cpp  lunch-lock.cpp  lunch-unlock.cpp  unlock.cpp
